# huawei_assignment

./: CMakeLists.txt  README.md  package.xml
launch/: camera.launch  crop_image.launch
src/: open_cv_crop_node.cpp
urdf/: camera.urdf  cylinder.urdf
