<?xml version="1.0"?>
<package format="2">
  <name>huawei_assignment</name>
  <version>0.0.0</version>
  <description>The huawei_assignment package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="daniele.mor1998@gmail.com">Daniele Morra</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
